ops/argocd/kustomize/argocd-extensions/argocd-extension-metrics/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-production
    nginx.ingress.kubernetes.io/enable-modsecurity: 'false'
    nginx.ingress.kubernetes.io/enable-opentelemetry: 'true'
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: 'true'
  labels:
    app.kubernetes.io/instance: argocd-extension-metrics
    app.kubernetes.io/name: argocd-extension-metrics
  name: argocd-extension-metrics
spec:
  ingressClassName: nginx
  rules:
    - host: argo.shortlink.best
      http:
        paths:
          - backend:
              service:
                name: argocd-metrics-server
                port:
                  number: 9003
            path: /extensions/metrics(/|$)(.*)
            pathType: Prefix
